Feature/auth_jwt_config: configure jwt for authentication and updated spring security respectively. Fixed the failing test cases.